# nav_bot

./: README.md  maze2_save1.pgm  maze2_save1.yaml  maze2_serialize1.data
src/nav_bot/: 2_CMakeLists.txt  CMakeLists.txt  package.xml
src/nav_bot/config/: gz_bridge.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav_bot_controllers.yaml  rviz_bot_config.rviz  rviz_nav_bot_config.rviz  rviz_nav_bot_config_2.rviz  twist_mux.yaml
src/nav_bot/description/: camera.xacro  depth_camera.xacro  lidar.xacro  nav_bot.urdf.xacro  ros2_control.xacro  structure.xacro
src/nav_bot/launch/: launch.py
src/nav_bot/src/: move.cpp  my_pub.cpp  my_pub_v2.cpp
src/nav_bot/worlds/: empty.world  maze1.sdf  maze2.sdf  maze2_dyn.sdf  obstacles.sdf  obstacles_optimized.sdf
